Fix download recording wait spinner/message alignment.

--- a/client/src/app/camera-params/camera-params.component.scss
+++ b/client/src/app/camera-params/camera-params.component.scss
@@ -16,11 +16,4 @@ div.camera-params-container
   }
 }
 
-mat-card-content.wait-box {
-  >span {
-    margin-left: 1rem;
-    margin-bottom: auto;
-    margin-top:auto;
-  }
-}
 
